--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@
   --text-xl: 1.25rem; /* 20px */
   --text-2xl: 1.5rem; /* 24px */
   --text-3xl: 2rem; /* 32px */
+  --text-4xl: 2.5rem; /* 40px */
+  --text-5xl: 3rem; /* 48px */
 
   /* spacing scale*/
   --space-1: 0.25rem; /* 4px */
