--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
   box-shadow: var(--shadow-paper);
   overflow-y: auto; /* Scroll if content doesn't fit */
   font-family: var(--font-sans);
+  
 }
 
 .sheet-face.front-face {
@@ -283,12 +284,18 @@
 
 /* cyber punk version */
 
-.clickable-section.burned {
+
+/* Allow overflow when any section is burned, so header can escape */
+.sheet-face:has(.clickable-section.burned) {
+  overflow: visible;
+}
+
+/* .clickable-section.burned {
   background: var(--color-bg-dark);
   border: 1px solid var(--color-neon-primary);
   box-shadow: 0 0 20px var(--color-neon-glow);
   transition: all 0.4s ease-out;
-}
+} */
 
 .clickable-section.burned h1,
 .clickable-section.burned h3,
@@ -310,11 +317,26 @@
 
 .clickable-section.burned .resume-header {
   transform: scale(1.2);
-  transform-origin: top center;
+  transform-origin: bottom center;
   padding: var(--space-6);
-  transition: all 0.4s ease-out;
+  transition: all 0.4s ease-in-out;
   border: 4px solid #ff006e;
-  animation: neonIgnite 2s ease-out forwards, neonFlicker 0.15s ease-in-out 1s infinite;
+  border-radius: 10px;
+  animation: neonIgnite 2s ease-out both, neonFlicker 0.15s ease-in-out 1s infinite;
+  background: #161414;
+}
+
+.clickable-section.burned .technical-skills-section {
+  transform: scale(1.2);
+  transform-origin: left center;
+  margin: 30px 0 40px 0;
+  width: 160%;
+  translate: 45px 0;
+  padding: var(--space-4);
+  transition: all 0.4s ease-in-out;
+  border: 4px solid #ff006e;
+  border-radius: 10px;
+  background: #161414;
 }
 
 @keyframes neonIgnite {
