--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Press+Start+2P&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+
 :root {
   /* color palette - paper + neon HUD */
   --color-paper: #fcf5f5;
